--- a/public/scan-lookup.html
+++ b/public/scan-lookup.html
@@ -263,34 +263,80 @@
       __orderSetAt: 0,
     };
 
-    /* ==== ここから: GSheetのLocationをfetchする関数 ==== */
-    // CSRFが要らない/不要にしているAPIならこのままでOK。
-    // 要るようにしてあるなら、X-CSRFを足してください。
+    // ==== GSheet から Location を取ってくる（CSRFあり・キーゆるめ） ====
+    const isLocal = () =>
+      location.protocol === 'http:' && /localhost|127\.0\.0\.1/.test(location.host);
+
+    const readCookie = (name) => {
+      const m = document.cookie.match(
+        new RegExp('(?:^|; )' + name.replace(/[-/\\^$*+?.()|[\]{}]/g, '\\$&') + '=([^;]*)')
+      );
+      return m ? decodeURIComponent(m[1]) : '';
+    };
+
+    async function ensureCsrf() {
+      // すでにある？
+      let tok = readCookie('xcsrf');
+      if (tok) return tok;
+
+      // ない場合は一度セッションを叩いてもらう
+      const url = isLocal() ? '/api/session?dev=1' : '/api/session';
+      await fetch(url, { method: 'GET', credentials: 'same-origin', cache: 'no-store' }).catch(() => {});
+      tok = readCookie('xcsrf');
+      return tok || '';
+    }
+
     async function fetchShelfFromGSheet(book, wc) {
       if (!book || !wc) return;
-      // すでにURLでlocが入っている場合は何もしない
-      if (state.currentShelf && state.currentShelf !== '（URL未指定）') return;
+
+      // いま既にURLでlocが決まっているなら無理に上書きしない
+      if (typeof state !== 'undefined' && state.currentShelf && state.currentShelf !== '（URL未指定）') {
+        return;
+      }
 
       DOM.currentShelf.textContent = '（棚情報を取得中…）';
       DOM.currentShelf.className = 'muted';
+
       try {
+        const csrf = await ensureCsrf();  // ← ここ追加
+
         const res = await fetch('/api/die-check', {
           method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
           credentials: 'same-origin',
-          body: JSON.stringify({ book, wc, json: true, limit: 1 })
+          headers: {
+            'Content-Type': 'application/json',
+            ...(csrf ? { 'X-CSRF': csrf } : {})
+          },
+          body: JSON.stringify({
+            book,
+            wc,
+            json: true,
+            limit: 1
+          })
         });
+
         const txt = await res.text();
-        let j = {};
-        try { j = JSON.parse(txt); } catch (e) {
-          throw new Error('JSON parse error: ' + txt.slice(0, 120));
+
+        // ここで HTML が返ることがあるので防御的にパース
+        let j;
+        try {
+          j = JSON.parse(txt);
+        } catch (e) {
+          console.warn('JSONでない応答:', txt.slice(0, 200));
+          throw new Error('JSONでない応答でした');
         }
+
         if (!res.ok || j.ok !== true) {
-          throw new Error(j.error || ('HTTP ' + res.status));
+          throw new Error(j.error || `HTTP ${res.status}`);
         }
-        const loc = j.gs && j.gs.Location ? String(j.gs.Location).trim() : '';
+
+        // ←←← ここを一番ゆるくする
+        const gs = j.gs || j.GS || j.sheet || {};
+        const loc =
+          (gs.Location ?? gs.location ?? gs.Loc ?? gs.loc ?? '').toString().trim();
+
         if (loc) {
-          state.currentShelf = loc;
+          if (typeof state !== 'undefined') state.currentShelf = loc;
           DOM.currentShelf.textContent = loc;
           DOM.currentShelf.className = 'chip loc';
         } else {
@@ -303,6 +349,7 @@
         DOM.currentShelf.className = 'muted';
       }
     }
+
     /* ==== ここまで追加 ==== */
 
     /* ====== 音声まわり ====== */
