--- a/public/scan-register.html
+++ b/public/scan-register.html
@@ -159,8 +159,8 @@
 // ========= 設定 (Settings) =========
 const SHEET_ENDPOINT = "/api/gsheet-seen-bulk";
 const AIRTABLE_ENDPOINT = "/api/airtable-update"; // Airtable APIエンドポイント
-const AIRTABLE_ENABLED = false; // ★ Airtable更新を一時停止
-const SCAN_RESOLUTION = 600; // スキャン解像度(px)。高いほど高精細だが遅くなる。600-800がおすすめ。
+const AIRTABLE_ENABLED = true; // ★ Airtable更新を一時停止
+const SCAN_RESOLUTION = 800; // スキャン解像度(px)。高いほど高精細だが遅くなる。600-800がおすすめ。
 
 // ========= 状態 (State) =========
 let fixedLoc = null;
